[project]
name = "rag-llama2"
version = "0.1.0"
description = ""
authors = [
    {name = "Saad"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "pypdf (>=5.5.0,<6.0.0)",
    "rapidocr-onnxruntime (>=1.4.4,<2.0.0)",
    "chromadb (>=1.0.10,<2.0.0)",
    "gpt4all (>=2.8.2,<3.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "protobuf (==3.20.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
